--- a/css/scss/_variables.scss
+++ b/css/scss/_variables.scss
@@ -7,3 +7,4 @@ $primary-5: #1f2421;
 
 // Screen sizes - using Bootstrap sizes as a reference!
 $screenwidth-col-xs: 768px;
+$screenwidth-col-sm: 992px;
